# SOEMGui

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSOEM.cmake
src/: CMakeLists.txt  EthercatBus.cpp  EthercatBus.h  EthercatUnit.cpp  EthercatUnit.h  Pdo.h  Slave.cpp  Slave.h  common.h  main.cpp
src/gui/: InputEditButtonDelegate.cpp  InputEditButtonDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SOEMGuiController.cpp  SOEMGuiController.h  SlaveTreeModel.cpp  SlaveTreeModel.h
